<resources>
    <string name="app_name">Books</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="login_text">Login</string>
    <string name="static_book_details">Static Book Details</string>
    <string name="dynamic_book_details">Dynamic Book Details</string>
    <string name="title">Title:</string>
    <string name="series">Series:</string>
    <string name="author">Author:</string>
    <string name="year">Year:</string>
    <string name="android_saga">Android Saga</string>
    <string name="programar_em_android_amsi">Programar em Android AMSI</string>
    <string name="equipa_amsi">Equipa AMSI</string>
    <string name="_2019">2019</string>
    <string name="send_email">Send Email</string>
    <string name="static_books">Static Books</string>
    <string name="dynamic_books">Dynamic Books</string>
    <string name="communicate">Communicate</string>
    <string name="email">Email</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_header_image_description">Header Image</string>
    <string name="livros_lista">Livros(Lista)</string>
    <string name="livros_grelha">Livros(Grelha)</string>
    <string name="cover">cover</string>
    <string name="add_content_hint">Add_Content_Hint</string>
    <string name="search">Search</string>
    <string name="remove">Remove</string>
    <string name="save_content">save_content</string>
    <string name="add_book">Add Book</string>
    <string name="remove_book">Remove Book</string>
    <string name="dialog_remove_message">Do you really want to remove this book ?</string>
    <string name="string_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="no_internet">No Internet Connectivity</string>
    <string name="edit_book">Edit Book</string>
</resources>