<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".BookDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_cover"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/cover"
                app:srcCompat="@drawable/logoipl" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/et_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/series"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/et_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/author"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/et_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="year"
                android:ems="10"
                android:hint="@string/year"
                android:inputType="number"
                tools:ignore="VisualLintTextFieldSize" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/save_content"
        android:focusable="true"
        android:backgroundTint="@color/purple_500"
        android:src="@drawable/ic_save"
        app:tint="@color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>