<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/imageViewCover"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        app:srcCompat="@drawable/programarandroid1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tvTitleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="teste" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeries"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/series" />

            <TextView
                android:id="@+id/tvSeriesContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0.7"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/author" />

            <TextView
                android:id="@+id/tvAuthorContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0.7"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/year" />

            <TextView
                android:id="@+id/tvYearContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="0.7"
                android:text="" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>